# med-assist

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  docker-compose.yml
.github/agents/: docs.agent.md  lint.agent.md  review.agent.md  security.agent.md  test.agent.md
.github/workflows/: backend-ci.yml  backend-lint.yml  ci.yml  frontend-ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  extractions.py  health.py  mock.py  uploads.py
backend/app/core/: config.py  dependencies.py  events.py  exception_handlers.py  exceptions.py
backend/app/db/: redis.py  temp_store.py
backend/app/interfaces/: repositories_interfaces.py  service_interfaces.py
backend/app/repositories/: text_repository.py
backend/app/routes/: __init__.py  extractions.py  health.py  uploads.py
backend/app/schemas/: extraction.py  upload.py
backend/app/services/: entity_extractor.py  file_handler.py  logger.py  text_extractor.py
backend/app/services/entity_extractor/: __init__.py  entity_extractor.py
backend/app/services/entity_extractor/label_mappings/: es.json  fr.json
backend/app/use_cases/: extract_entities.py  file_handler.py  save_file.py  validate_file.py
backend/tests/: test_entity_extractor.py  test_extract_entities.py  test_file_handler.py  test_redis_storage.py  test_text_extractor.py  test_validate_file.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ExtractionViewer.tsx  FileUpload.tsx
frontend/app/components/__tests__/: ExtractionViewer.test.tsx  FileUpload.test.tsx
frontend/public/: index.html
frontend/src/: App.css  App.js
