[project]
name = "med-assist-backend"
version = "0.1.0"
description = "The backend for the Med-Assist application."
authors = [{ name = "Jonathan Perron", email = "jonathan@perron.bzh" }]
requires-python = ">=3.12, <3.15"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi[standard]==0.128.0",
    "uvicorn[standard]==0.40.0",
    "PyMuPDF>=1.26.7",
    "python-docx>=0.8.11",
    "redis[async]==7.1.0",
    "pydantic-settings>=2.12.0,<3",
    "transformers>=4.57.3,<5",
    "torch>=2.9.1,<3",
    "protobuf>=6.33.2,<7",
    "sentencepiece>=0.2.1,<0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
