[project]
name = "med-assist-backend"
version = "0.1.0"
description = "The backend for the Med-Assist application."
authors = [{ name = "Jonathan Perron", email = "jonathan@perron.bzh" }]
requires-python = ">=3.12, <3.15"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi[standard]==0.135.1",
    "uvicorn[standard]==0.42.0",
    "PyMuPDF==1.27.2",
    "python-docx==1.2.0",
    "redis==7.3.0",
    "pydantic-settings>=2.13.1,<3",
    "transformers>=5.3.0,<6",
    "torch>=2.10.0,<3",
    "protobuf>=7.34.1,<8",
    "sentencepiece>=0.2.1,<0.3",
    "numpy>=2.4.3,<3",
    "urllib3>=2.6.3,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "virtualenv>=21.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
